robots update, clarity in experience

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,29 @@
           <div class="technologies-table-column">
             <h3>Front-end</h3>
             <ul>
-              <li>TypeScript, JavaScript</li>
-              <li>CSS/SASS/etc</li>
-              <li>React, JSX, TSX</li>
+              <li>
+                TypeScript
+                <ul>
+                  <li>JavaScript</li>
+                </ul>
+              </li>
+              <li>
+                SASS
+                <ul>
+                  <li>CSS</li>
+                </ul>
+              </li>
+              <li>
+                React
+                <ul>
+                  <li>JSX</li>
+                  <li>TSX</li>
+                </ul>
+              </li>
               <li>HTML5</li>
               <li>Websockets, WebRTC, MediaStreams</li>
               <li>Electron</li>
-              <li>Webpack, Parcel, etc.</li>
+              <li>Webpack, Parcel</li>
               <li>React Native</li>
               <li>Flutter</li>
               <li>Angular</li>
@@ -41,27 +57,45 @@
           <div class="technologies-table-column">
             <h3>Back-end</h3>
             <ul>
-              <li>Node 8-latest</li>
-              <li>PostgreSQL</li>
-              <li>MySQL</li>
-              <li>SQLite</li>
-              <li>Redis</li>
-              <li>WebRTC</li>
+              <li>Node</li>
               <li>Golang</li>
-              <li>Linux (Arch, Debian, Ubuntu, Amazon)</li>
-              <li>AWS, GCP, DigitalOcean</li>
+              <li>
+                Databases
+                <ul>
+                  <li>PostgreSQL</li>
+                  <li>MySQL</li>
+                  <li>SQLite</li>
+                  <li>Redis</li>
+                </ul>
+              </li>
+              <li>
+                Linux
+                <ul>
+                  <li>Arch</li>
+                  <li>Debian (Ubuntu, Amazon)</li>
+                </ul>
+              </li>
+              <li>Websockets, WebRTC</li>
+              <li>
+                DevOps
+                <ul>
+                  <li>AWS</li>
+                  <li>GCP</li>
+                  <li>DigitalOcean</li>
+                </ul>
+              </li>
               <li>Firebase</li>
             </ul>
           </div>
           <div class="technologies-table-column">
             <h3>Games</h3>
             <ul>
-              <li>C++14 through C++22</li>
-              <li>Unreal Engine 4</li>
-              <li>Unreal Engine 5</li>
-              <li>Visual Studio, Rider</li>
+              <li>C++11 through C++22</li>
+              <li>Unreal Engine 5, Unreal Engine 4</li>
               <li>Source Engine</li>
               <li>Lua</li>
+              <li>C</li>
+              <li>Visual Studio, Rider</li>
             </ul>
           </div>
         </div>
@@ -69,6 +103,10 @@
       <section>
         <h2>Work Experience</h2>
         <ul>
+          <li>
+            <a href="https://alderongames.com/" target="_blank">Alderon Games</a
+            >, 2023-present. Contract programmer.
+          </li>
           <li>
             <a href="https://ramjetstudios.com/" target="_blank"
               >Ramjet Studios</a
