--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Kyle Windsor</title>
-    <link rel="stylesheet" href="styles.scss" />
+    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Kyle Windsor's homepage." />
   </head>
@@ -190,8 +190,8 @@
           is ENTJ.
         </p>
         <p>
-          This site is written in HTML and SCSS with optional JavaScript. You
-          can
+          This site is written in plain HTML and CSS with optional JavaScript.
+          You can
           <a
             href="https://github.com/disseminate/kylewindsor.io"
             target="_blank"
