update work experience table, coloration of numerals

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
         <p>I'm a senior full-stack software engineer.</p>
         <p>
           I'm proficient in various <span class="ye">web technologies</span> and
-          <span class="ye">C++</span>. I've been programming since I was 12 in
-          2006.
+          <span class="ye">C++</span>. I've been programming since I was
+          <span class="or">12</span>.
         </p>
         <p>
           I've been programming professionally for
-          <span id="years">many</span> years.
+          <span id="years" class="or">many</span> years.
         </p>
         <div class="technologies-table">
           <div class="technologies-table-column">
@@ -102,49 +102,64 @@
       </section>
       <section>
         <h2>Work Experience</h2>
-        <ul>
-          <li>
-            <a href="https://alderongames.com/" target="_blank">Alderon Games</a
-            >, 2023-present. Contract programmer.
-          </li>
-          <li>
+        <div class="employment-table">
+          <div>
+            <a href="https://alderongames.com/" target="_blank"
+              >Alderon Games</a
+            >
+          </div>
+          <div class="tx2">2023 &mdash; present</div>
+          <div>Contract programmer.</div>
+          <div>
             <a href="https://ramjetstudios.com/" target="_blank"
               >Ramjet Studios</a
-            >, 2022-present. Founder & CEO.
-          </li>
-          <li>
-            <a href="https://mercury.com/" target="_blank">Mercury</a>,
-            2022-2023. Senior frontend engineer.
-          </li>
-          <li>
-            <a href="https://www.angellist.com/" target="_blank">AngelList</a>,
-            2022. Senior fullstack engineer.
-          </li>
-          <li>
-            <a href="https://www.prepared911.com/" target="_blank">Prepared</a>,
-            2021-2022. Staff fullstack engineer.
-          </li>
-          <li>
+            >
+          </div>
+          <div class="tx2">2022 &mdash; present</div>
+          <div>Founder & CEO.</div>
+          <div><a href="https://mercury.com/" target="_blank">Mercury</a></div>
+          <div class="tx2">2022 &mdash; 2023</div>
+          <div>Senior frontend engineer.</div>
+          <div>
+            <a href="https://www.angellist.com/" target="_blank">AngelList</a>
+          </div>
+          <div class="tx2">2022</div>
+          <div>Senior fullstack engineer.</div>
+          <div>
+            <a href="https://www.prepared911.com/" target="_blank">Prepared</a>
+          </div>
+          <div class="tx2">2021 &mdash; 2022</div>
+          <div>Staff fullstack engineer.</div>
+          <div>
             <a href="https://www.crowbarcollective.com/" target="_blank"
               >Crowbar Collective</a
-            >, 2021. Contract programmer.
-          </li>
-          <li>
-            <a href="https://www.qi.games/" target="_blank">QI Games</a>,
-            2020-2021. Lead programmer.
-          </li>
-          <li>
-            <a href="https://devlift.com/" target="_blank">Devlift Media</a>,
-            2015-2020. Senior fullstack developer.
-          </li>
-        </ul>
+            >
+          </div>
+          <div class="tx2">2021</div>
+          <div>Contract programmer.</div>
+          <div>
+            <a href="https://www.qi.games/" target="_blank">QI Games</a>
+          </div>
+          <div class="tx2">2020 &mdash; 2021</div>
+          <div>Lead programmer.</div>
+          <div>
+            <a href="https://devlift.com/" target="_blank">Devlift Media</a>
+          </div>
+          <div class="tx2">2015 &mdash; 2020</div>
+          <div>Senior fullstack developer.</div>
+          <div>
+            <a href="https://isp.ca/" target="_blank">ISP Canada</a>
+          </div>
+          <div class="tx2">2013 &mdash; 2015</div>
+          <div>Tools programmer.</div>
+        </div>
       </section>
       <section>
         <h2>Ongoing Projects</h2>
         <ul>
           <li>
             <a href="https://vein.gg/" target="_blank">VEIN</a>, multiplayer
-            open-world survival game. <span class="gr">54,000</span> Steam
+            open-world survival game. <span class="or">54,000</span> Steam
             wishlist preorders and counting. <span class="ye">C++, Node</span>.
           </li>
           <li>
@@ -163,7 +178,7 @@
           <a href="https://uwo.ca/" target="_blank"
             >the University of Western Ontario</a
           >
-          for 7 years. I earned my BSc in
+          for <span class="or">7</span> years. I earned my BSc in
           <span class="ye">computer science</span> and
           <span class="ye">astrophysics</span>, followed by my MSc in
           <span class="ye">computer science</span>.
