--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
         <p>
           I'm proficient in various <span class="ye">web technologies</span> and
           <span class="ye">C++</span>. I've been programming since I was
-          <span class="or">12</span>.
+          <span class="gr">12</span>.
         </p>
         <p>
           I've been programming professionally for
-          <span id="years" class="or">many</span> years.
+          <span id="years" class="gr">many</span> years.
         </p>
         <div class="technologies-table">
           <div class="technologies-table-column">
@@ -159,7 +159,7 @@
         <ul>
           <li>
             <a href="https://vein.gg/" target="_blank">VEIN</a>, multiplayer
-            open-world survival game. <span class="or">54,000</span> Steam
+            open-world survival game. <span class="gr">54,000</span> Steam
             wishlist preorders and counting. <span class="ye">C++, Node</span>.
           </li>
           <li>
@@ -178,7 +178,7 @@
           <a href="https://uwo.ca/" target="_blank"
             >the University of Western Ontario</a
           >
-          for <span class="or">7</span> years. I earned my BSc in
+          for <span class="gr">7</span> years. I earned my BSc in
           <span class="ye">computer science</span> and
           <span class="ye">astrophysics</span>, followed by my MSc in
           <span class="ye">computer science</span>.
