--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,10 @@
             <span class="ye">React, Node, Typescript, PostgreSQL</span>.
           </li>
         </ul>
+        <p>
+          There are too many projects I've worked on prior to these to list. If
+          you're curious please get in contact.
+        </p>
       </section>
       <section>
         <h2>Education</h2>
