some personal notes

--- a/src/index.html
+++ b/src/index.html
@@ -209,6 +209,30 @@
           is ENTJ.
         </p>
         <p>
+          My hobbies include language learning (previously studied Chinese,
+          Cantonese, Spanish and now focusing on Thai) and collecting geodes.
+        </p>
+        <p>
+          I watch a ton of movies, especially dramas, thrillers, and sci-fi, and
+          maintain a somewhat large personal collection.
+        </p>
+        <p>
+          My favorite music genres include electronic (drum and bass, Y2K,
+          industrial, house, trip hop, bass), folk, and progressive rock. You
+          can
+          <a
+            href="https://open.spotify.com/user/22ayc3ifl5r2rm2qbn232yqzi?si=2a21a8e1568c4a55"
+            target="_blank"
+            >view my Spotify profile here</a
+          >.
+        </p>
+        <p>
+          My favorite author is
+          <a href="https://www.gregegan.net/" target="_blank">Greg Egan</a>. You
+          should buy some of his anthologies if you're at all interested in hard
+          sci-fi.
+        </p>
+        <p>
           This site is written in plain HTML and CSS with optional JavaScript.
           You can
           <a
