--- a/src/index.html
+++ b/src/index.html
@@ -233,6 +233,39 @@
           sci-fi.
         </p>
         <p>
+          My favorite games include
+          <a href="https://en.wikipedia.org/wiki/Subnautica" target="_blank"
+            >Subnautica</a
+          >, the
+          <a
+            href="https://en.wikipedia.org/wiki/Half-Life_(series)"
+            target="_blank"
+            >Half-Life</a
+          >
+          series,
+          <a
+            href="https://en.wikipedia.org/wiki/Left_4_Dead_(franchise)"
+            target="_blank"
+            >Left 4 Dead</a
+          >
+          1 &amp; 2, the
+          <a href="https://en.wikipedia.org/wiki/Mass_Effect" target="_blank"
+            >Mass Effect</a
+          >
+          series,
+          <a
+            href="https://en.wikipedia.org/wiki/Fallout:_New_Vegas"
+            target="_blank"
+            >Fallout: New Vegas</a
+          >, and
+          <a
+            href="https://en.wikipedia.org/wiki/Project_Zomboid"
+            target="_blank"
+            >Project Zomboid</a
+          >. Generally I enjoy first-person shooters, RPGs, and simulation
+          games. I also play a lot of games in VR.
+        </p>
+        <p>
           This site is written in plain HTML and CSS with optional JavaScript.
           You can
           <a
