--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <h1>Kyle Windsor</h1>
+      <hr />
       <section>
         <h2>About</h2>
         <p>I'm a senior full-stack software engineer.</p>
@@ -172,7 +173,9 @@
         </ul>
         <p>
           There are too many projects I've worked on prior to these to list. If
-          you're curious please get in contact.
+          you're curious please get in contact. You can also take a look at my
+          <a href="https://github.com/disseminate" target="_blank">GitHub</a>
+          but most of my projects are private.
         </p>
       </section>
       <section>
@@ -198,7 +201,7 @@
         </p>
       </section>
       <section>
-        <h2>Miscellaneous</h2>
+        <h2>Personal</h2>
         <p>
           My
           <a
@@ -265,15 +268,6 @@
           >. Generally I enjoy first-person shooters, RPGs, and simulation
           games. I also play a lot of games in VR.
         </p>
-        <p>
-          This site is written in plain HTML and CSS with optional JavaScript.
-          You can
-          <a
-            href="https://github.com/disseminate/kylewindsor.io"
-            target="_blank"
-            >find the source here</a
-          >.
-        </p>
       </section>
       <section>
         <h2>Contact</h2>
@@ -281,6 +275,17 @@
           Send an email to
           <a href="mailto:kyle@kylewindsor.io" target="_blank"
             >kyle@kylewindsor.io</a
+          >.
+        </p>
+      </section>
+      <section>
+        <p>
+          This site is written in plain HTML and CSS with optional JavaScript.
+          You can
+          <a
+            href="https://github.com/disseminate/kylewindsor.io"
+            target="_blank"
+            >find the source here</a
           >.
         </p>
       </section>
