--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Kyle Windsor</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Kyle Windsor's homepage." />
   </head>
@@ -192,7 +192,7 @@
         </p>
         <p>
           You can read
-          <a href="./assets/bachelor-thesis.pdf" target="_blank"
+          <a href="./src/assets/bachelor-thesis.pdf" target="_blank"
             >my bachelor's thesis here</a
           >. My
           <a href="https://ir.lib.uwo.ca/etd/6844/" target="_blank"
@@ -290,6 +290,6 @@
         </p>
       </section>
     </main>
-    <script src="index.ts" async></script>
+    <script type="module" src="src/index.ts" async></script>
   </body>
 </html>
