--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
           for <span class="gr">7</span> years. I earned my BSc in
           <span class="ye">computer science</span> and
           <span class="ye">astrophysics</span>, followed by my MSc in
-          <span class="ye">computer science</span>.
+          <span class="ye">computer science</span>. I had a brief period of
+          astrophysics study at the
+          <a href="https://www.hku.hk/" target="_blank"
+            >University of Hong Kong</a
+          >.
         </p>
         <p>
           You can read
