--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <span class="ye">computer science</span> and
           <span class="ye">astrophysics</span>, followed by my MSc in
           <span class="ye">computer science</span>. I had a brief period of
-          astrophysics study at the
+          <span class="ye">astrophysics</span> study at the
           <a href="https://www.hku.hk/" target="_blank"
             >University of Hong Kong</a
           >.
