correct broken link

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             wishlist preorders and counting. <span class="ye">C++, Node</span>.
           </li>
           <li>
-            <a href="https://pomelolanguage/" target="_blank">Pomelo</a>,
+            <a href="https://pomelolanguage.com/" target="_blank">Pomelo</a>,
             language-learning platform designed as an
             <a href="https://apps.ankiweb.net/" target="_blank">Anki</a>
             replacement.
