--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Kyle Windsor</title>
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="canonical" href="https://kylewindsor.io/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Kyle Windsor's homepage." />
   </head>
