--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="canonical" href="https://kylewindsor.io/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Kyle Windsor's homepage." />
+    <meta
+      name="description"
+      content="Kyle Windsor's homepage, with work and project experience and a brief biography."
+    />
   </head>
   <body>
     <main>
