correct thesis link

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </p>
         <p>
           You can read
-          <a href="./src/assets/bachelor-thesis.pdf" target="_blank"
+          <a href="/bachelor-thesis.pdf" target="_blank"
             >my bachelor's thesis here</a
           >. My
           <a href="https://ir.lib.uwo.ca/etd/6844/" target="_blank"
