--- a/index.html
+++ b/index.html
@@ -304,6 +304,6 @@
         </p>
       </section>
     </main>
-    <script type="module" src="src/index.ts" async></script>
+    <script type="module" src="src/index.ts" defer></script>
   </body>
 </html>
