--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
           <h2 id="work-experience">Work Experience</h2>
           <div class="employment-table">
             <div>
-              <a href="https://alderongames.com/">Alderon Games</a>
-            </div>
-            <div class="tx2">2023 &mdash; present</div>
-            <div>Contract programmer.</div>
-            <div>
               <a href="https://ramjetstudios.com/">Ramjet Studios</a>
             </div>
             <div class="tx2">2022 &mdash; present</div>
             <div>Founder & CEO.</div>
+            <div>
+              <a href="https://alderongames.com/">Alderon Games</a>
+            </div>
+            <div class="tx2">2023 &mdash; 2024</div>
+            <div>Contract programmer.</div>
             <div><a href="https://mercury.com/">Mercury</a></div>
             <div class="tx2">2022 &mdash; 2023</div>
             <div>Senior frontend engineer.</div>
