add skills to employment history

--- a/index.html
+++ b/index.html
@@ -116,51 +116,135 @@
         </section>
         <section aria-labelledby="work-experience">
           <h2 id="work-experience">Work Experience</h2>
-          <div class="employment-table">
-            <div>
-              <a href="https://ramjetstudios.com/">Ramjet Studios</a>
+          <table class="employment-table">
+            <div class="employment-entry">
+              <div>
+                <a href="https://ramjetstudios.com/">Ramjet Studios</a>
+              </div>
+              <div class="tx2">2022 &mdash; present</div>
+              <div>
+                <div>Founder & CEO.</div>
+                <div class="employment-tags">
+                  <div>C++</div>
+                  <div>Node</div>
+                  <div>React</div>
+                  <div>PostgreSQL</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2022 &mdash; present</div>
-            <div>Founder & CEO.</div>
-            <div>
-              <a href="https://alderongames.com/">Alderon Games</a>
+            <div class="employment-entry">
+              <div>
+                <a href="https://alderongames.com/">Alderon Games</a>
+              </div>
+              <div class="tx2">2023 &mdash; 2024</div>
+              <div>
+                <div>Contract programmer.</div>
+                <div class="employment-tags">
+                  <div>C++</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2023 &mdash; 2024</div>
-            <div>Contract programmer.</div>
-            <div><a href="https://mercury.com/">Mercury</a></div>
-            <div class="tx2">2022 &mdash; 2023</div>
-            <div>Senior frontend engineer.</div>
-            <div>
-              <a href="https://www.angellist.com/">AngelList</a>
+            <div class="employment-entry">
+              <div><a href="https://mercury.com/">Mercury</a></div>
+              <div class="tx2">2022 &mdash; 2023</div>
+              <div>
+                <div>Senior frontend engineer.</div>
+                <div class="employment-tags">
+                  <div>React</div>
+                  <div>ThreeJS</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2022</div>
-            <div>Senior fullstack engineer.</div>
-            <div>
-              <a href="https://www.prepared911.com/">Prepared</a>
+            <div class="employment-entry">
+              <div>
+                <a href="https://www.angellist.com/">AngelList</a>
+              </div>
+              <div class="tx2">2022</div>
+              <div>
+                <div>Senior fullstack engineer.</div>
+                <div class="employment-tags">
+                  <div>React</div>
+                  <div>Ruby</div>
+                  <div>PostgreSQL</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2021 &mdash; 2022</div>
-            <div>Staff fullstack engineer.</div>
-            <div>
-              <a href="https://www.crowbarcollective.com/">Crowbar Collective</a>
+            <div class="employment-entry">
+              <div>
+                <a href="https://www.prepared911.com/">Prepared</a>
+              </div>
+              <div class="tx2">2021 &mdash; 2022</div>
+              <div>
+                <div>Staff fullstack engineer.</div>
+                <div class="employment-tags">
+                  <div>React Native</div>
+                  <div>Flutter</div>
+                  <div>Node</div>
+                  <div>Go</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2021</div>
-            <div>Contract programmer.</div>
-            <div>
-              <a href="https://www.qi.games/">QI Games</a>
+            <div class="employment-entry">
+              <div>
+                <a href="https://www.crowbarcollective.com/">Crowbar Collective</a>
+              </div>
+              <div class="tx2">2021</div>
+              <div>
+                <div>Contract programmer.</div>
+                <div class="employment-tags">
+                  <div>C++</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2020 &mdash; 2021</div>
-            <div>Lead programmer.</div>
-            <div>
-              <a href="https://devlift.com/">Devlift Media</a>
+            <div class="employment-entry">
+              <div>
+                <a href="https://www.qi.games/">QI Games</a>
+              </div>
+              <div class="tx2">2020 &mdash; 2021</div>
+              <div>
+                <div>Lead programmer.</div>
+                <div class="employment-tags">
+                  <div>C++</div>
+                  <div>React</div>
+                  <div>Node</div>
+                  <div>PostgreSQL</div>
+                  <div>MySQL</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2015 &mdash; 2020</div>
-            <div>Senior fullstack developer.</div>
-            <div>
-              <a href="https://isp.ca/">ISP Canada</a>
+            <div class="employment-entry">
+              <div>
+                <a href="https://devlift.com/">Devlift Media</a>
+              </div>
+              <div class="tx2">2015 &mdash; 2020</div>
+              <div>
+                <div>Senior fullstack developer.</div>
+                <div class="employment-tags">
+                  <div>React</div>
+                  <div>Angular</div>
+                  <div>Ionic</div>
+                  <div>React Native</div>
+                  <div>Node</div>
+                  <div>PostgreSQL</div>
+                  <div>MySQL</div>
+                  <div>MongoDB</div>
+                </div>
+              </div>
             </div>
-            <div class="tx2">2013 &mdash; 2015</div>
-            <div>Tools programmer.</div>
-          </div>
+            <div class="employment-entry">
+              <div>
+                <a href="https://isp.ca/">ISP Canada</a>
+              </div>
+              <div class="tx2">2013 &mdash; 2015</div>
+              <div>
+                <div>Tools programmer.</div>
+                <div class="employment-tags">
+                  <div>PHP</div>
+                  <div>MySQL</div>
+                </div>
+              </div>
+            </div>
+          </table>
         </section>
         <section aria-labelledby="projects">
           <h2 id="projects">Ongoing Projects</h2>
