add some missing skills

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                   <div>Node</div>
                   <div>React</div>
                   <div>PostgreSQL</div>
+                  <div>SQLite</div>
                 </div>
               </div>
             </div>
@@ -181,6 +182,8 @@
                   <div>Flutter</div>
                   <div>Node</div>
                   <div>Go</div>
+                  <div>Websockets</div>
+                  <div>WebRTC</div>
                 </div>
               </div>
             </div>
