add missing graphql qualifications

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <li>TSX</li>
                   </ul>
                 </li>
+                <li>GraphQL</li>
                 <li>HTML5</li>
                 <li>Websockets, WebRTC, MediaStreams</li>
                 <li>Electron</li>
@@ -90,6 +91,7 @@
                   </ul>
                 </li>
                 <li>Websockets, WebRTC</li>
+                <li>GraphQL</li>
                 <li>
                   DevOps
                   <ul>
@@ -130,6 +132,7 @@
                   <div>React</div>
                   <div>PostgreSQL</div>
                   <div>SQLite</div>
+                  <div>GraphQL</div>
                 </div>
               </div>
             </div>
@@ -184,6 +187,7 @@
                   <div>Go</div>
                   <div>Websockets</div>
                   <div>WebRTC</div>
+                  <div>GraphQL</div>
                 </div>
               </div>
             </div>
